YUK-25094 : Change Button Styling(Fixed review comments and other alignment issues)

--- a/yukon-client/yukon-web/src/com/cannontech/web/common/resources/yukon.less
+++ b/yukon-client/yukon-web/src/com/cannontech/web/common/resources/yukon.less
@@ -327,7 +327,7 @@ input[type=radio] {
 .switch-btn:not(.inverse) .switch-btn-checkbox:not(:checked) ~ .no,
 .switch-btn.inverse .switch-btn-checkbox:checked ~ .no,
 .radio-btn input:checked ~ .button {
-	background-color: rgba(0, 0, 0, 0.08);
+	background-color: #ebebeb;
 }
 
 .switch-btn:not(.inverse) .switch-btn-checkbox:checked ~ .yes:not(.no-color) .b-label,
@@ -1726,12 +1726,12 @@ li:hover .show-on-hover {
 .criteria-button {
 	text-align: left;
 	position: relative;
-	border-color: rgba(0, 0, 0, 0.12);
+	border-color: #cbcbcb;
 	color: #727e84 !important;
 }
 
 .criteria-button:hover {
-	background-color: rgba(0, 0, 0, 0.04) !important;
+	background-color: #f2f8fc !important;
 }
 
 .criteria-button > .criteria-wrap {display: inline-block;float: left;max-width: 200px;overflow: hidden;text-overflow: ellipsis;white-space: nowrap;}
